[package]
name = "chatbot-app"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
langchain-rust = { version = "4.0.1", features = ["postgres"] }
sqlx = { version = "0.7.4", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "json", "uuid" ], optional = true }
axum = {version = "0.6.20", features = ["headers"]}
serde_json = "1.0.115"
tokio = "1.37.0"
uuid = {version = "1.8.0", features = ["v4"], optional = true }
pgvector = {version = "0.3.2", features = ["postgres", "sqlx"], optional = true }
async-trait = "0.1.79"
serde = "1.0.197"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0.58"
colored = "2.1.0"
spinners = "4.1.1"
toml = "0.8.12"

[features]
postgres = ["pgvector", "sqlx", "uuid"]

